improvmments in brasilApi
